src/styles/main.css
/* * {
    border: 1px solid black;
} */

.flex-container-row {
    display: flex;
    flex-direction: row;
}

.flex-container-row-even {
    display: flex;
    flex-direction: row;
    justify-content: space-between;
    align-items: center;
}

.flex-container-col {
    display: flex;
    flex-direction: column;
}

.scrollable-container-events {
    height: 30vh;
    /* max-height: 10%; */
    overflow-x: hidden;
    border: 1px solid navyblue;
    /* background-color: darkgrey; */
}

.scrollable-container-messages {
    height: 20vh;
    /* max-height: 10%; */
    overflow-x: hidden;
    border: 1px solid navyblue;
    /* background-color: darkgrey; */
}

.scrollable-container-main {
    height: max-content;
    max-height: 90%;
    overflow-x: hidden;
    /* background-color: darkgrey; */
}

.row {
    margin-top: 0.5em;
    margin-bottom: 0.5em;
    padding: 0.5em;
}

.card {
    border: 1px solid darkgrey;
    border-radius: 10px;
    margin-bottom: 10px;
}

